preferences.xhtml: filled about pane.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5513 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/preferences.xhtml
+++ b/content/preferences.xhtml
@@ -272,7 +272,28 @@
 <div id="pane-alert"></div>
 <div id="pane-changes"></div>
 <div id="pane-help"></div>
-<div id="pane-about"></div>
+<div id="pane-about">
+	<div class="module">
+		<h3 text="about.headDevelopers"></h3>
+		<ul id="about-head-developers" class="about-list" path="about/head_developers/head_developer"></ul>
+	</div>
+	<div class="module">
+		<h3 text="about.projectOwners"></h3>
+		<ul id="about-project-owners" class="about-list" path="about/project_owners/project_owner"></ul>
+	</div>
+	<div class="module">
+		<h3 text="about.developers"></h3>
+		<ul id="about-developers" class="about-list" path="about/developers/developer"></ul>
+	</div>
+	<div class="module">
+		<h3 text="about.translators"></h3>
+		<ul id="about-translators" class="about-list" path="about/translations/translation"></ul>
+	</div>
+	<div class="module">
+		<h3 text="about.designers"></h3>
+		<ul id="about-designers" class="about-list" path="about/graphics/designer"></ul>
+	</div>
+</div>
 </div>
 
 <div id="balloon">
