preferences.xhtml: filled help pane.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5514 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/preferences.xhtml
+++ b/content/preferences.xhtml
@@ -271,7 +271,16 @@
 <div id="pane-links"></div>
 <div id="pane-alert"></div>
 <div id="pane-changes"></div>
-<div id="pane-help"></div>
+<div id="pane-help">
+	<div class="module">
+		<h3 text="foxtrick.prefs.links"></h3>
+		<ul id="external-links-list"></ul>
+	</div>
+	<div class="module">
+		<h3 text="StyleTutorial.title"></h3>
+		<p id="style-tutorial-text"></p>
+	</div>
+</div>
 <div id="pane-about">
 	<div class="module">
 		<h3 text="about.headDevelopers"></h3>
