Feedback after saving preferences.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5516 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/preferences.xhtml
+++ b/content/preferences.xhtml
@@ -297,9 +297,12 @@
 </div>
 </div>
 
-<div id="balloon">
-<button id="save" text="foxtrick.prefs.buttonSave"></button>
-<button id="cancel" text="foxtrick.prefs.buttonCancel"></button>
+<div id="fixed">
+	<div id="balloon">
+		<button id="save" text="foxtrick.prefs.buttonSave"></button>
+		<button id="cancel" text="foxtrick.prefs.buttonCancel"></button>
+	</div>
+	<div id="note"></div>
 </div>
 </body>
 </html>
