--- a/content/preferences.xhtml
+++ b/content/preferences.xhtml
@@ -182,7 +182,7 @@
 			</tr>
 			<tr>
 				<td><label id="pref-read-date-format-label" for="pref-read-date-format" text="foxtrick.prefs.captionHTDateformat"></label></td>
-				<td><select id="pref-read-date-format" pref="htDateFormat" blocked-by="pref-read-ht-prefs"></select></td>
+				<td><select id="pref-read-date-format" pref="htDateformat" blocked-by="pref-read-ht-prefs"></select></td>
 			</tr>
 		</table>
 	</div><!-- ReadHtPrefs -->
