Added comments for preferences.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5543 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/preferences.xhtml
+++ b/content/preferences.xhtml
@@ -149,6 +149,7 @@
 <body onload="init();">
 <h1 id="title" text-key="foxtrick.prefs.preferences"></h1>
 
+<!-- tabs for each category -->
 <ul id="tabs">
 <li id="tab-main"><a text-key="foxtrick.prefs.MainTab"></a></li>
 <li id="tab-shortcuts"><a text-key="foxtrick.prefs.ShortcutsTab"></a></li>
@@ -161,6 +162,7 @@
 <li id="tab-about"><a text-key="foxtrick.prefs.AboutTab"></a></li>
 </ul>
 
+<!-- content of each tab -->
 <div id="panes">
 <div id="pane-main">
 	<div class="module"><!-- ReadHtPrefs -->
