Moved time-related functions from foxtrick.js to util/.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5573 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/preferences.xhtml
+++ b/content/preferences.xhtml
@@ -23,6 +23,7 @@
 	<!-- utilities -->
 	<script type="application/x-javascript" src="chrome://foxtrick/content/util/currency.js"></script>
 	<script type="application/x-javascript" src="chrome://foxtrick/content/util/note.js"></script>
+	<script type="application/x-javascript" src="chrome://foxtrick/content/util/time.js"></script>
 
 	<!-- individual modules -->
 	<script type="application/x-javascript" src="chrome://foxtrick/content/forum/forumstriphattricklinks.js"></script>
