Use module and option properties for modules and options.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5577 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/preferences.xhtml
+++ b/content/preferences.xhtml
@@ -168,7 +168,7 @@
 <div id="pane-main">
 	<div class="module"><!-- ReadHtPrefs -->
 		<h3 id="pref-read-ht-prefs-title" text-key="foxtrick.prefs.basicPreferences"></h3>
-		<input type="checkbox" id="pref-read-ht-prefs" pref="module.ReadHtPrefs.enabled" />
+		<input type="checkbox" id="pref-read-ht-prefs" module="ReadHtPrefs" />
 		<label id="pref-read-ht-prefs-label" for="pref-read-ht-prefs" text-key="foxtrick.ReadHtPrefs.desc"></label>
 		<table>
 			<tr>
@@ -245,7 +245,7 @@
 				<label id="pref-header-icon-label" for="pref-header-icon" text-key="foxtrick.prefs.smallcopyicons"></label>
 			</li>
 			<li>
-				<input type="checkbox" id="pref-on-page-prefs" pref="module.OnPagePrefs.enabled" />
+				<input type="checkbox" id="pref-on-page-prefs" module="OnPagePrefs" />
 				<label id="pref-on-page-prefs-label" for="pref-on-page-prefs" text-key="foxtrick.OnPagePrefs.desc"></label>
 			</li>
 			<li>
