--- a/content/preferences.xhtml
+++ b/content/preferences.xhtml
@@ -107,6 +107,7 @@
 	<script type="application/x-javascript" src="chrome://foxtrick/content/presentation/skilltranslation.js"></script>
 	<script type="application/x-javascript" src="chrome://foxtrick/content/presentation/smallerpages.js"></script>
 	<script type="application/x-javascript" src="chrome://foxtrick/content/presentation/backgroundfixed.js"></script>
+	<script type="application/x-javascript" src="chrome://foxtrick/content/presentation/oldStyleFace.js"></script>
 	<script type="application/x-javascript" src="chrome://foxtrick/content/links/linkscustom.js"></script>
 	<script type="application/x-javascript" src="chrome://foxtrick/content/links/linksleague.js"></script>
 	<script type="application/x-javascript" src="chrome://foxtrick/content/links/linksteam.js"></script>
