Show per-link preferences in preferences interface.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5598 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/preferences.xhtml
+++ b/content/preferences.xhtml
@@ -108,6 +108,7 @@
 	<script type="application/x-javascript" src="chrome://foxtrick/content/presentation/smallerpages.js"></script>
 	<script type="application/x-javascript" src="chrome://foxtrick/content/presentation/backgroundfixed.js"></script>
 	<script type="application/x-javascript" src="chrome://foxtrick/content/presentation/oldStyleFace.js"></script>
+	<script type="application/x-javascript" src="chrome://foxtrick/content/links/links.js"></script>
 	<script type="application/x-javascript" src="chrome://foxtrick/content/links/linkscustom.js"></script>
 	<script type="application/x-javascript" src="chrome://foxtrick/content/links/linksleague.js"></script>
 	<script type="application/x-javascript" src="chrome://foxtrick/content/links/linksteam.js"></script>
