Separated ShortPAs as a file.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5663 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/preferences.xhtml
+++ b/content/preferences.xhtml
@@ -81,7 +81,6 @@
 	<script type="application/x-javascript" src="chrome://foxtrick/content/shortcuts_and_tweaks/lastlogin.js"></script>
 	<script type="application/x-javascript" src="chrome://foxtrick/content/shortcuts_and_tweaks/LeagueAndMatchChat.js"></script>
 	<script type="application/x-javascript" src="chrome://foxtrick/content/shortcuts_and_tweaks/rapidid.js"></script>
-
 	<script type="application/x-javascript" src="chrome://foxtrick/content/shortcuts_and_tweaks/extraPlayerInfo.js"></script>
 	<script type="application/x-javascript" src="chrome://foxtrick/content/shortcuts_and_tweaks/playerFilters.js"></script>
 	<script type="application/x-javascript" src="chrome://foxtrick/content/shortcuts_and_tweaks/youthSeriesEstimation.js"></script>
@@ -102,6 +101,7 @@
 	<script type="application/x-javascript" src="chrome://foxtrick/content/presentation/SimplePresentation.js"></script>
 	<script type="application/x-javascript" src="chrome://foxtrick/content/presentation/headerfix.js"></script>
 	<script type="application/x-javascript" src="chrome://foxtrick/content/presentation/leaguenewsfilter.js"></script>
+	<script type="application/x-javascript" src="chrome://foxtrick/content/presentation/short-pas.js"></script>
 	<script type="application/x-javascript" src="chrome://foxtrick/content/presentation/moveplayerselectbox.js"></script>
 	<script type="application/x-javascript" src="chrome://foxtrick/content/presentation/highlightcupwins.js"></script>
 	<script type="application/x-javascript" src="chrome://foxtrick/content/presentation/skilltranslation.js"></script>
