Added asynchronous XMLHttpRequest in LoadXML.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5718 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/background.html
+++ b/content/background.html
@@ -370,15 +370,18 @@ chrome.extension.onConnect.addListener(function(port) {
 	}
 });
 
-chrome.extension.onConnect.addListener(function(port) {
-	if (port.name == "getxml") {
-		port.onMessage.addListener(function(msg) {
-			var xhr = new XMLHttpRequest();
-			xhr.open("GET", msg.url, false);
-			xhr.send();
-			port.postMessage({ xml : xhr.responseXML});
-		});
-	}
+chrome.extension.onRequest.addListener(function(request, sender, sendResponse) {
+	var xhr = new XMLHttpRequest();
+	xhr.open("GET", request.url, true);
+	xhr.onreadystatechange = function(aEvt) {
+		if (req.readyState == 4) {
+			if (req.status == 200
+				|| req.status == 0) {
+				sendResponse({data : xhr.responseXML});
+			}
+		}
+	};
+	xhr.send();
 });
 
 </script>
