NtPeek module for peeking NT/U20 matches at MyHT.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5754 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/preferences.xhtml
+++ b/content/preferences.xhtml
@@ -84,6 +84,7 @@
 	<script type="application/x-javascript" src="./shortcuts_and_tweaks/playerFilters.js"></script>
 	<script type="application/x-javascript" src="./shortcuts_and_tweaks/youthSeriesEstimation.js"></script>
 	<script type="application/x-javascript" src="./shortcuts_and_tweaks/transferSearchResultFilters.js"></script>
+	<script type="application/x-javascript" src="./shortcuts_and_tweaks/nt-peek.js"></script>
 	<script type="application/x-javascript" src="./presentation/extendedplayerdetails.js"></script>
 	<script type="application/x-javascript" src="./presentation/originalFace.js"></script>
 	<script type="application/x-javascript" src="./presentation/movePlayerStatement.js"></script>
