In Chrome, initialize key modules within each file.
Also improved the implementation of preferences.

git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5775 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/background.html
+++ b/content/background.html
@@ -1,5 +1,10 @@
 <html>
 <head>
+	<script type="application/x-javascript" src="./const.js"></script>
+	<script type="application/x-javascript" src="./prefs.js"></script>
+	<script type="application/x-javascript" src="./l10n.js"></script>
+	<script type="application/x-javascript" src="./xml_load.js"></script>
+	<script type="application/x-javascript" src="./foxtrick.js"></script>
 	<script type="application/x-javascript" src="./background.js"></script>
 </head>
 <body>
