matches/: unify module file name style.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5814 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/preferences.xhtml
+++ b/content/preferences.xhtml
@@ -43,14 +43,14 @@
 	<script type="application/x-javascript" src="./forum/ForumPresentation.js"></script>
 	<script type="application/x-javascript" src="./forum/ForumThreadAutoIgnore.js"></script>
 	<script type="application/x-javascript" src="./matches/matches.js"></script>
-	<script type="application/x-javascript" src="./matches/matchPlayerColouring.js"></script>
-	<script type="application/x-javascript" src="./matches/matchReport.js"></script>
+	<script type="application/x-javascript" src="./matches/match-player-colouring.js"></script>
+	<script type="application/x-javascript" src="./matches/match-report-format.js"></script>
 	<script type="application/x-javascript" src="./matches/ratings.js"></script>
-	<script type="application/x-javascript" src="./matches/attvsdef.js"></script>
-	<script type="application/x-javascript" src="./matches/starscounter.js"></script>
-	<script type="application/x-javascript" src="./matches/matchincome.js"></script>
-	<script type="application/x-javascript" src="./matches/copyRatings.js"></script>
-	<script type="application/x-javascript" src="./matches/htmsStatistics.js"></script>
+	<script type="application/x-javascript" src="./matches/att-vs-def.js"></script>
+	<script type="application/x-javascript" src="./matches/stars-counter.js"></script>
+	<script type="application/x-javascript" src="./matches/match-income.js"></script>
+	<script type="application/x-javascript" src="./matches/copy-ratings.js"></script>
+	<script type="application/x-javascript" src="./matches/htms-statistics.js"></script>
 	<script type="application/x-javascript" src="./shortcuts_and_tweaks/tableSort.js"></script>
 	<script type="application/x-javascript" src="./shortcuts_and_tweaks/flagCollectionToMap.js"></script>
 	<script type="application/x-javascript" src="./shortcuts_and_tweaks/mediantransferprice.js"></script>
