alert/: unify module file name style.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5815 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/preferences.xhtml
+++ b/content/preferences.xhtml
@@ -130,11 +130,11 @@
 	<script type="application/x-javascript" src="./links/linksclubtransfers.js"></script>
 	<script type="application/x-javascript" src="./links/linksstaff.js"></script>
 	<script type="application/x-javascript" src="./links/linkstracker.js"></script>
-	<script type="application/x-javascript" src="./alert/foxtrickalert.js"></script>
-	<script type="application/x-javascript" src="./alert/alertcustom.js"></script>
-	<script type="application/x-javascript" src="./alert/alertcustomsounds.js"></script>
-	<script type="application/x-javascript" src="./alert/tickercoloring.js"></script>
-	<script type="application/x-javascript" src="./alert/newmail.js"></script>
+	<script type="application/x-javascript" src="./alert/foxtrick-alert.js"></script>
+	<script type="application/x-javascript" src="./alert/alert-custom.js"></script>
+	<script type="application/x-javascript" src="./alert/alert-custom-sounds.js"></script>
+	<script type="application/x-javascript" src="./alert/ticker-coloring.js"></script>
+	<script type="application/x-javascript" src="./alert/new-mail.js"></script>
 	<script type="application/x-javascript" src="./alert/live-alert.js"></script>
 
 	<!-- following modules all run on 'all_late' pages. order of execution is determined be following order -->
