--- a/content/preferences.xhtml
+++ b/content/preferences.xhtml
@@ -25,23 +25,23 @@
 	<script type="application/x-javascript" src="./util/time.js"></script>
 
 	<!-- individual modules -->
-	<script type="application/x-javascript" src="./forum/forumstriphattricklinks.js"></script>
-	<script type="application/x-javascript" src="./forum/forumchangeposts_modules.js"></script>
-	<script type="application/x-javascript" src="./forum/forumchangeposts.js"></script>
-	<script type="application/x-javascript" src="./forum/forumtemplates.js"></script>
-	<script type="application/x-javascript" src="./forum/forumpreview.js"></script>
-	<script type="application/x-javascript" src="./forum/forumyouthicons.js"></script>
-	<script type="application/x-javascript" src="./forum/forumleaveconfbutton.js"></script>
-	<script type="application/x-javascript" src="./forum/staffmarker.js"></script>
-	<script type="application/x-javascript" src="./forum/forumhidesignatures.js"></script>
-	<script type="application/x-javascript" src="./forum/forummarkunread.js"></script>
-	<script type="application/x-javascript" src="./forum/forumnextandprevious.js"></script>
-	<script type="application/x-javascript" src="./forum/forumlastpost.js"></script>
-	<script type="application/x-javascript" src="./forum/forumshowprefbutton.js"></script>
-	<script type="application/x-javascript" src="./forum/htthreadmarker.js"></script>
-	<script type="application/x-javascript" src="./forum/forumgotopostbox.js"></script>
-	<script type="application/x-javascript" src="./forum/ForumPresentation.js"></script>
-	<script type="application/x-javascript" src="./forum/ForumThreadAutoIgnore.js"></script>
+	<script type="application/x-javascript" src="./forum/forum-strip-hattrick-links.js"></script>
+	<script type="application/x-javascript" src="./forum/forum-change-posts-modules.js"></script>
+	<script type="application/x-javascript" src="./forum/forum-change-posts.js"></script>
+	<script type="application/x-javascript" src="./forum/forum-templates.js"></script>
+	<script type="application/x-javascript" src="./forum/forum-preview.js"></script>
+	<script type="application/x-javascript" src="./forum/forum-youth-icons.js"></script>
+	<script type="application/x-javascript" src="./forum/add-leave-conf-button.js"></script>
+	<script type="application/x-javascript" src="./forum/staff-marker.js"></script>
+	<script type="application/x-javascript" src="./forum/hide-signatures.js"></script>
+	<script type="application/x-javascript" src="./forum/mark-unread.js"></script>
+	<script type="application/x-javascript" src="./forum/forum-next-and-previous.js"></script>
+	<script type="application/x-javascript" src="./forum/forum-last-post.js"></script>
+	<script type="application/x-javascript" src="./forum/show-forum-pref-button.js"></script>
+	<script type="application/x-javascript" src="./forum/ht-thread-marker.js"></script>
+	<script type="application/x-javascript" src="./forum/go-to-post-box.js"></script>
+	<script type="application/x-javascript" src="./forum/forum-presentation.js"></script>
+	<script type="application/x-javascript" src="./forum/forum-thread-auto-ignore.js"></script>
 	<script type="application/x-javascript" src="./matches/matches.js"></script>
 	<script type="application/x-javascript" src="./matches/match-player-colouring.js"></script>
 	<script type="application/x-javascript" src="./matches/match-report-format.js"></script>
