links/: unify module name style.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5841 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/preferences.xhtml
+++ b/content/preferences.xhtml
@@ -109,27 +109,27 @@
 	<script type="application/x-javascript" src="./presentation/background-fixed.js"></script>
 	<script type="application/x-javascript" src="./presentation/old-style-face.js"></script>
 	<script type="application/x-javascript" src="./links/links.js"></script>
-	<script type="application/x-javascript" src="./links/linkscustom.js"></script>
-	<script type="application/x-javascript" src="./links/linksleague.js"></script>
-	<script type="application/x-javascript" src="./links/linksteam.js"></script>
-	<script type="application/x-javascript" src="./links/linkscountry.js"></script>
-	<script type="application/x-javascript" src="./links/linkschallenges.js"></script>
-	<script type="application/x-javascript" src="./links/linkseconomy.js"></script>
-	<script type="application/x-javascript" src="./links/linksyouth.js"></script>
-	<script type="application/x-javascript" src="./links/linksarena.js"></script>
-	<script type="application/x-javascript" src="./links/linkscoach.js"></script>
-	<script type="application/x-javascript" src="./links/linksplayerdetail.js"></script>
-	<script type="application/x-javascript" src="./links/linksmatch.js"></script>
-	<script type="application/x-javascript" src="./links/linkstraining.js"></script>
-	<script type="application/x-javascript" src="./links/linksalliances.js"></script>
-	<script type="application/x-javascript" src="./links/linksnational.js"></script>
-	<script type="application/x-javascript" src="./links/linksmanager.js"></script>
-	<script type="application/x-javascript" src="./links/linksachievements.js"></script>
-	<script type="application/x-javascript" src="./links/linksplayers.js"></script>
-	<script type="application/x-javascript" src="./links/linksfans.js"></script>
-	<script type="application/x-javascript" src="./links/linksclubtransfers.js"></script>
-	<script type="application/x-javascript" src="./links/linksstaff.js"></script>
-	<script type="application/x-javascript" src="./links/linkstracker.js"></script>
+	<script type="application/x-javascript" src="./links/links-custom.js"></script>
+	<script type="application/x-javascript" src="./links/links-league.js"></script>
+	<script type="application/x-javascript" src="./links/links-team.js"></script>
+	<script type="application/x-javascript" src="./links/links-country.js"></script>
+	<script type="application/x-javascript" src="./links/links-challenges.js"></script>
+	<script type="application/x-javascript" src="./links/links-economy.js"></script>
+	<script type="application/x-javascript" src="./links/links-youth.js"></script>
+	<script type="application/x-javascript" src="./links/links-arena.js"></script>
+	<script type="application/x-javascript" src="./links/links-coach.js"></script>
+	<script type="application/x-javascript" src="./links/links-player-detail.js"></script>
+	<script type="application/x-javascript" src="./links/links-match.js"></script>
+	<script type="application/x-javascript" src="./links/links-training.js"></script>
+	<script type="application/x-javascript" src="./links/links-alliances.js"></script>
+	<script type="application/x-javascript" src="./links/links-national.js"></script>
+	<script type="application/x-javascript" src="./links/links-manager.js"></script>
+	<script type="application/x-javascript" src="./links/links-achievements.js"></script>
+	<script type="application/x-javascript" src="./links/links-players.js"></script>
+	<script type="application/x-javascript" src="./links/links-fans.js"></script>
+	<script type="application/x-javascript" src="./links/links-club-transfers.js"></script>
+	<script type="application/x-javascript" src="./links/links-staff.js"></script>
+	<script type="application/x-javascript" src="./links/links-tracker.js"></script>
 	<script type="application/x-javascript" src="./alert/foxtrick-alert.js"></script>
 	<script type="application/x-javascript" src="./alert/alert-custom.js"></script>
 	<script type="application/x-javascript" src="./alert/alert-custom-sounds.js"></script>
