Foxtrick.copyStringToClipboard() for Google Chrome.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5872 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/background.html
+++ b/content/background.html
@@ -8,5 +8,6 @@
 	<script type="application/x-javascript" src="./background.js"></script>
 </head>
 <body>
+<textarea id="clipboard-store">Used for copying in Google Chrome.</textarea>
 </body>
 </html>
