--- a/content/preferences.xhtml
+++ b/content/preferences.xhtml
@@ -18,6 +18,7 @@
 	<script type="application/x-javascript" src="./preferences-dialog-html.js"></script>
 	<script type="application/x-javascript" src="./preferences-on-page.js"></script>
 	<script type="application/x-javascript" src="./forum_stage.js"></script>
+	<script type="application/x-javascript" src="./header-copy-icons.js"></script>
 
 	<!-- utilities -->
 	<script type="application/x-javascript" src="./util/currency.js"></script>
