Add version in preferences page.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5883 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/preferences.xhtml
+++ b/content/preferences.xhtml
@@ -151,7 +151,10 @@
 	<title>FoxTrick Preferences</title>
 </head>
 <body onload="init();">
-<h1 id="title" text-key="foxtrick.prefs.preferences"></h1>
+<h1 id="title">
+	<span text-key="foxtrick.prefs.preferences"></span>
+	<span id="version"></span>
+</h1>
 
 <!-- tabs for each category -->
 <ul id="tabs">
