Make showing release notes optional.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5910 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/preferences.xhtml
+++ b/content/preferences.xhtml
@@ -256,6 +256,10 @@
 				<label id="pref-on-page-prefs-label" for="pref-on-page-prefs" text-key="foxtrick.OnPagePrefs.desc"></label>
 			</li>
 			<li>
+				<input type="checkbox" id="pref-show-release-notes" pref="showReleaseNotes" />
+				<label id="pref-show-release-notes-label" for="pref-show-release-notes" text-key="foxtrick.showReleaseNotes"></label>
+			</li>
+			<li>
 				<input type="checkbox" id="pref-debug-info" pref="DisplayHTMLDebugOutput" />
 				<label id="pref-debug-info-label" for="pref-debug-info" text-key="foxtrick.prefs.DisplayHTMLDebugOutput"></label>
 			</li>
