--- a/content/preferences.xhtml
+++ b/content/preferences.xhtml
@@ -109,6 +109,7 @@
 	<script type="application/x-javascript" src="./presentation/smaller-pages.js"></script>
 	<script type="application/x-javascript" src="./presentation/background-fixed.js"></script>
 	<script type="application/x-javascript" src="./presentation/old-style-face.js"></script>
+	<script type="application/x-javascript" src="./presentation/guestbook-htms-flags.js" />
 	<script type="application/x-javascript" src="./links/links.js"></script>
 	<script type="application/x-javascript" src="./links/links-custom.js"></script>
 	<script type="application/x-javascript" src="./links/links-league.js"></script>
