added new module: htms-points.js
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5956 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/preferences.xhtml
+++ b/content/preferences.xhtml
@@ -111,6 +111,7 @@
 	<script type="application/x-javascript" src="./presentation/old-style-face.js"></script>
 	<script type="application/x-javascript" src="./presentation/guestbook-htms-flags.js" />
 	<script type="application/x-javascript" src="./presentation/move-manager-online.js" />
+	<script type="application/x-javascript" src="./presentation/htms-points.js" />
 	<script type="application/x-javascript" src="./links/links.js"></script>
 	<script type="application/x-javascript" src="./links/links-custom.js"></script>
 	<script type="application/x-javascript" src="./links/links-league.js"></script>
